--- a/demo.html
+++ b/demo.html
@@ -18,18 +18,18 @@
     <div id="target2"></div>
     <h2>demo 3</h2>
     <div id="target3"></div>
-    <h2>demo 4</h2>
-    <div id="target4"></div>
 
     <script type="text/template" id="template">
       <div class="person">
         <h3>{{name}}</h3>
         <p>Age: {{age}}</p>
-        @if{{job}}
-        <p>Job: {{job}}</p>
-        @endif
         @if{{sex}}
         <p>Sex: {{sex}}</p>
+        @endif
+        @if{{job}}
+        <p>Job: {{job}}</p>
+        @else
+        <p>Available for hire</p>
         @endif
       </div>
     </script>
