--- a/demo.html
+++ b/demo.html
@@ -5,9 +5,8 @@
     <title>front.js</title>
     <style>
       body { font-family: Georgia, serif; }
-      h2, h3, p { margin: 10px; }
-      div { vertical-align: top; }
-      .person { border: 1px solid #ccc; margin: 5px; padding: 5px 10px; width: 200px; display: inline-block; }
+      h2, h3, p, div { margin: 10px; overflow: hidden; }
+      .person { border: 1px solid #ccc; margin: 5px; padding: 5px 10px; width: 200px; float: left; }
     </style>
   </head>
   <body>
